# Real-Time-ML

./: Makefile  README.md
services/topic_to_feature_store/: Dockerfile  Makefile  live.prod.env  pyproject.toml
services/topic_to_feature_store/src/: config.py  main.py
services/trade_producer/: Makefile  dev.env  prod.env  pyproject.toml
services/trade_producer/src/: Makefile  config.py  kraken_websocket_api.py  main.py
services/trade_to_ohlc/: Dockerfile  Makefile  live.dev.env  live.prod.env  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
