[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aejaz Muslim <aejaz.muslim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
hopsworks = "^3.7.0"
quixstreams = "^2.11.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
